# OttoGuide-Proyecto_SIP-Grupo6-UADE

./: .gitignore  README.md  notas.txt
OttoGuide Autonomo/codigo ottoguide/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements_prod.txt
OttoGuide Autonomo/codigo ottoguide/api/: __init__.py  router.py  schemas.py
OttoGuide Autonomo/codigo ottoguide/config/: __init__.py  nav2_params_g1.yaml
OttoGuide Autonomo/codigo ottoguide/deploy/: ottoguide.service  ottoguide_mvp.service
OttoGuide Autonomo/codigo ottoguide/hardware/: __init__.py  interface.py  real_adapter.py  sim_adapter.py
OttoGuide Autonomo/codigo ottoguide/maps/: create_dummy_map.sh
OttoGuide Autonomo/codigo ottoguide/scripts/: bootstrap_hil.sh  bootstrap_target.sh  cut_release.sh  deploy.sh  deploy_to_companion.sh  e2e_mock_validation.py  export_academic_metrics.py  fetch_unitree_libs.sh  freeze_dependencies.sh  hil_calibrate_node.sh  hil_mapping_recorder.sh  hil_save_map.sh  hil_start_mapping.sh  hil_start_navigation.sh  hil_waypoint_calibrator.py  install_service.sh  install_systemd_service.sh  isaac_uade_base.py  launch_sitl_tmux.sh  mvp_master_run.sh  pre_deploy_cleanup.sh  preflight_check.sh  provision_interaction_stack.sh  run_slam_mapping.sh  sitl_smoke_test.py  sre_health_check.py  start_interaction_mvp.sh  start_robot.sh  test_audio.py  verify_remote_env.sh
OttoGuide Autonomo/codigo ottoguide/src/: __init__.py
OttoGuide Autonomo/codigo ottoguide/src/api/: __init__.py  api_server.py  server.py  websocket_manager.py
OttoGuide Autonomo/codigo ottoguide/src/core/: __init__.py  mission_audit.py  tour_orchestrator.py
OttoGuide Autonomo/codigo ottoguide/src/hardware/: robot_hardware_api.py
OttoGuide Autonomo/codigo ottoguide/src/interaction/: __init__.py  audio_bridge.py  conversation_manager.py  (+1 more)
OttoGuide Autonomo/codigo ottoguide/static/: dashboard.html
(+69 files in other folders)
