[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otto-guide"
version = "0.1.0"
description = "OttoGuide — Robot humanoide Unitree G1 EDU 8 como guia de visitas universitarias"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Seminario de Integracion Profesional — UADE 2026"},
]

dependencies = [
    # @TASK: Declarar dependencias reales del stack de produccion OttoGuide
    # @INPUT: Importaciones activas en src/, hardware/, api/ y main.py
    # @OUTPUT: Entorno reproducible via pip install -e .
    # @CONTEXT: Unico manifest de dependencias; cyclonedds para DDS Unitree G1 EDU

    # --- Servidor API ---
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.0",

    # --- Red / DDS ---
    "cyclonedds==0.10.2",
    "httpx>=0.27",              # Cliente HTTP async para Ollama y proveedores cloud NLP

    # --- NLP / STT / TTS ---
    "faster-whisper>=1.0",      # STT en CPU; reemplaza SpeechRecognition (eliminada)
    "piper-tts>=1.2",           # TTS local edge; reemplaza pyttsx3 (eliminada)
    "sounddevice>=0.4",         # Reproduccion PCM via ALSA

    # --- Vision / Robotica ---
    "opencv-python-headless>=4.9",
    "numpy>=1.24",

    # --- Maquina de estados ---
    "python-statemachine>=2.3.0",
]

[project.optional-dependencies]
hardware = [
    "unitree_sdk2py @ file:libs/unitree_sdk2_python-master",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
